--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -19,36 +19,22 @@
     "url": "https://github.com/ionic-team/ionic.git"
   },
   "scripts": {
-    "build": "npm run clean && npm run compile && npm run clean-generated",
-    "clean": "rm -rf dist",
-    "clean-generated": "node ./scripts/clean.js",
-    "compile": "./node_modules/.bin/ngc",
-    "deploy": "np --any-branch",
-    "tsc": "tsc -p ."
+    "build": "npm run clean && npm run transpile",
+    "clean": "rimraf demo/node_modules/@ionic/angular/dist",
+    "transpile": "tsc -p . || true"
   },
-  "main": "./dist/src/index.js",
-  "module": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/"
   ],
-  "devDependencies": {
-    "@angular/common": "next",
-    "@angular/compiler": "next",
-    "@angular/compiler-cli": "next",
-    "@angular/core": "next",
-    "@angular/forms": "next",
-    "@angular/http": "next",
-    "@angular/platform-browser": "next",
-    "@angular/platform-browser-dynamic": "next",
-    "@ionic/core": "next",
-    "glob": "7.1.2",
-    "ionicons": "~3.0.0",
-    "rxjs": "5.5.2",
-    "typescript": "~2.5.2",
-    "zone.js": "0.8.18"
-  },
   "dependencies": {
-    "@stencil/core": "0.0.7"
+    "@angular/common": "^5.0.4",
+    "@angular/core": "^5.0.4",
+    "@angular/forms": "^5.0.4"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.2"
   }
 }
